[package]
name = "wasm-bug"
version = "0.1.0"
authors = ["andrew.westlake <Andrew.Westlake@Cobham.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
